# paperui

./: .gitignore  CMakeLists.txt  README.md  build.bat  paperui.sln
Output/Win64/: paperui_d.ilk  window.json  window.xml
example1/: CMakeLists.txt
example1/src/: main.cpp
paperui/: CMakeLists.txt  main.cpp  paper_application.c  paper_application.cpp  paper_application.h  paper_builder.cpp  paper_builder.h  paper_define.h  paper_elememt.c  paper_elememt.h  paper_event.c  paper_event.h  paper_memorypool.c  paper_memorypool.h  paper_render.cpp  paper_render.h  paper_string.c  paper_string.h  paper_thread.cpp  paper_thread.h  paper_timer.cpp  paper_timer.h  paper_util.c  paper_util.h  paper_vector.c  paper_vector.h  paper_widget.c  paper_widget.h  paper_window.c  paper_window.h  paperui.vcxproj  paperui.vcxproj.filters
paperui/include/: CApplication.h  platformdef.h
paperui/include/Render/: CBitmap.h  CBrush.h  CColor.h  CFont.h  CPainter.h  CPoint.h  CRect.h
paperui/include/Utils/: CString.h
paperui/include/Widgets/: CPanel.h  CWidget.h
paperui/include/Window/: CMainWindow.h  CWindow.h  CWindowBase.h
paperui/private/include/: CD2D1Context.h  CGlobalResource.h  CWindowPainterContext.h
paperui/private/src/: CD2D1Context.cpp  CGlobalResource.cpp  CWindowPainterContext..cpp  pugixml.cpp
paperui/src/: CApplication.cpp  main.cpp
paperui/src/Render/: CBitmap.cpp  CBrush.cpp  CColor.cpp  CFont.cpp  CPainter.cpp  CPoint.cpp  CRect.cpp
paperui/src/Utils/: CString.cpp
paperui/src/Widgets/: CPanel.cpp  CWidget.cpp
paperui/src/Window/: CMainWindow.cpp  CWindow.cpp  CWindowBase.cpp
paperui_dll/: dllmain.cpp  libpaperui.def  paperui_dll.vcxproj  paperui_dll.vcxproj.filters
